--- a/StandardQLearner_8h.html
+++ b/StandardQLearner_8h.html
@@ -86,7 +86,8 @@ var searchBox = new SearchBox("searchBox", "search",false,'Search');
 <h1>/home/accts/tcd2/Documents/Senior/Independent_Research/Spring/SHLSystem/src/Primitives/QLearner/StandardQLearner.h File Reference</h1>  </div>
 </div>
 <div class="contents">
-<div class="textblock"><code>#include &lt;string&gt;</code><br/>
+<div class="textblock"><code>#include &lt;stdlib.h&gt;</code><br/>
+<code>#include &lt;string&gt;</code><br/>
 <code>#include &lt;vector&gt;</code><br/>
 <code>#include &quot;QLearner/QLearner.h&quot;</code><br/>
 <code>#include &quot;QLearner/QTable.h&quot;</code><br/>
