--- a/ExplorationType_8h.html
+++ b/ExplorationType_8h.html
@@ -88,6 +88,8 @@ var searchBox = new SearchBox("searchBox", "search",false,'Search');
 <div class="contents">
 <div class="textblock"><code>#include &lt;string&gt;</code><br/>
 <code>#include &lt;vector&gt;</code><br/>
+<code>#include &quot;Student/Sensor.h&quot;</code><br/>
+<code>#include &quot;QLearner/QLearner.h&quot;</code><br/>
 </div>
 <p><a href="ExplorationType_8h_source.html">Go to the source code of this file.</a></p>
 <table class="memberdecls">
