--- a/ExplorationType_8h_source.html
+++ b/ExplorationType_8h_source.html
@@ -89,36 +89,38 @@ var searchBox = new SearchBox("searchBox", "search",false,'Search');
 <a name="l00013"></a>00013 <span class="preprocessor"></span>
 <a name="l00014"></a>00014 <span class="preprocessor">#include &lt;string&gt;</span>
 <a name="l00015"></a>00015 <span class="preprocessor">#include &lt;vector&gt;</span>
-<a name="l00016"></a>00016 
-<a name="l00017"></a>00017 <span class="keyword">namespace </span>Primitives {
+<a name="l00016"></a>00016 <span class="preprocessor">#include &quot;Student/Sensor.h&quot;</span>
+<a name="l00017"></a>00017 <span class="preprocessor">#include &quot;QLearner/QLearner.h&quot;</span>
 <a name="l00018"></a>00018 
-<a name="l00019"></a>00019 <span class="keyword">using</span> std::string;
-<a name="l00020"></a>00020 <span class="keyword">using</span> std::vector;
-<a name="l00021"></a>00021 
-<a name="l00022"></a>00022 <span class="keyword">class </span>QLearner;
-<a name="l00023"></a>00023 <span class="keyword">class </span>Sensor;
-<a name="l00024"></a>00024 
-<a name="l00025"></a><a class="code" href="classPrimitives_1_1ExplorationType.html">00025</a> <span class="keyword">class </span><a class="code" href="classPrimitives_1_1ExplorationType.html">ExplorationType</a> {
-<a name="l00026"></a>00026  <span class="keyword">public</span>:
-<a name="l00031"></a><a class="code" href="classPrimitives_1_1ExplorationType.html#a403002bc5dc30a63d040786d1d80d686">00031</a>   <span class="keyword">virtual</span> <a class="code" href="classPrimitives_1_1ExplorationType.html#a403002bc5dc30a63d040786d1d80d686">~ExplorationType</a>() {}
-<a name="l00032"></a>00032 
-<a name="l00041"></a>00041   <span class="keyword">virtual</span> <span class="keywordtype">bool</span> <a class="code" href="classPrimitives_1_1ExplorationType.html#a999c7d8407125e6fe82b9bca5c373999">GetNextStep</a>(<a class="code" href="classPrimitives_1_1State.html">State</a> <span class="keyword">const</span>&amp; current_state,
-<a name="l00042"></a>00042                            <a class="code" href="classPrimitives_1_1State.html">State</a> <span class="keyword">const</span> **next_states) = 0;
-<a name="l00043"></a>00043 
-<a name="l00044"></a>00044  <span class="keyword">protected</span>:
-<a name="l00050"></a><a class="code" href="classPrimitives_1_1ExplorationType.html#a228f817e6dfb4105b5323daddf6f6f02">00050</a>   <span class="keyword">explicit</span> <a class="code" href="classPrimitives_1_1ExplorationType.html#a228f817e6dfb4105b5323daddf6f6f02">ExplorationType</a>(<a class="code" href="classPrimitives_1_1QLearner.html">QLearner</a> * <span class="keyword">const</span> learner) {
-<a name="l00051"></a>00051     learner_ = learner;
-<a name="l00052"></a>00052   }
-<a name="l00053"></a>00053 
-<a name="l00054"></a>00054  <span class="keyword">private</span>:
-<a name="l00058"></a>00058   <a class="code" href="classPrimitives_1_1ExplorationType.html">ExplorationType</a>() {}
-<a name="l00059"></a>00059 
-<a name="l00063"></a>00063   QLearner *learner_;
-<a name="l00064"></a>00064 };
-<a name="l00065"></a>00065 
-<a name="l00066"></a>00066 }  <span class="comment">// namespace Primitives</span>
+<a name="l00019"></a>00019 <span class="keyword">namespace </span>Primitives {
+<a name="l00020"></a>00020 
+<a name="l00021"></a>00021 <span class="keyword">using</span> std::string;
+<a name="l00022"></a>00022 <span class="keyword">using</span> std::vector;
+<a name="l00023"></a>00023 
+<a name="l00024"></a>00024 <span class="keyword">class </span>QLearner;
+<a name="l00025"></a>00025 <span class="keyword">class </span>Sensor;
+<a name="l00026"></a>00026 
+<a name="l00027"></a><a class="code" href="classPrimitives_1_1ExplorationType.html">00027</a> <span class="keyword">class </span><a class="code" href="classPrimitives_1_1ExplorationType.html">ExplorationType</a> {
+<a name="l00028"></a>00028  <span class="keyword">public</span>:
+<a name="l00033"></a><a class="code" href="classPrimitives_1_1ExplorationType.html#a403002bc5dc30a63d040786d1d80d686">00033</a>   <span class="keyword">virtual</span> <a class="code" href="classPrimitives_1_1ExplorationType.html#a403002bc5dc30a63d040786d1d80d686">~ExplorationType</a>() {}
+<a name="l00034"></a>00034 
+<a name="l00043"></a>00043   <span class="keyword">virtual</span> <span class="keywordtype">bool</span> <a class="code" href="classPrimitives_1_1ExplorationType.html#a999c7d8407125e6fe82b9bca5c373999">GetNextStep</a>(<a class="code" href="classPrimitives_1_1State.html">State</a> <span class="keyword">const</span>&amp; current_state,
+<a name="l00044"></a>00044                            <a class="code" href="classPrimitives_1_1State.html">State</a> <span class="keyword">const</span> **next_states) = 0;
+<a name="l00045"></a>00045 
+<a name="l00046"></a>00046  <span class="keyword">protected</span>:
+<a name="l00052"></a><a class="code" href="classPrimitives_1_1ExplorationType.html#a228f817e6dfb4105b5323daddf6f6f02">00052</a>   <span class="keyword">explicit</span> <a class="code" href="classPrimitives_1_1ExplorationType.html#a228f817e6dfb4105b5323daddf6f6f02">ExplorationType</a>(<a class="code" href="classPrimitives_1_1QLearner.html">QLearner</a> * <span class="keyword">const</span> learner) {
+<a name="l00053"></a>00053     learner_ = learner;
+<a name="l00054"></a>00054   }
+<a name="l00055"></a>00055 
+<a name="l00056"></a>00056  <span class="keyword">private</span>:
+<a name="l00060"></a>00060   <a class="code" href="classPrimitives_1_1ExplorationType.html">ExplorationType</a>() {}
+<a name="l00061"></a>00061 
+<a name="l00065"></a>00065   QLearner *learner_;
+<a name="l00066"></a>00066 };
 <a name="l00067"></a>00067 
-<a name="l00068"></a>00068 <span class="preprocessor">#endif  // _SHL_PRIMITIVES_EXPLORATION_EXPLORATIONTYPE_H_</span>
+<a name="l00068"></a>00068 }  <span class="comment">// namespace Primitives</span>
+<a name="l00069"></a>00069 
+<a name="l00070"></a>00070 <span class="preprocessor">#endif  // _SHL_PRIMITIVES_EXPLORATION_EXPLORATIONTYPE_H_</span>
 </pre></div></div>
 </div>
   <div id="nav-path" class="navpath">
