--- a/Sensor_8h.html
+++ b/Sensor_8h.html
@@ -87,6 +87,7 @@ var searchBox = new SearchBox("searchBox", "search",false,'Search');
 </div>
 <div class="contents">
 <div class="textblock"><code>#include &lt;vector&gt;</code><br/>
+<code>#include &lt;string&gt;</code><br/>
 </div>
 <p><a href="Sensor_8h_source.html">Go to the source code of this file.</a></p>
 <table class="memberdecls">
