--- a/Sensor_8h_source.html
+++ b/Sensor_8h_source.html
@@ -88,43 +88,54 @@ var searchBox = new SearchBox("searchBox", "search",false,'Search');
 <a name="l00012"></a>00012 <span class="preprocessor"></span><span class="preprocessor">#define _SHL_PRIMITIVES_STUDENT_SENSOR_H_</span>
 <a name="l00013"></a>00013 <span class="preprocessor"></span>
 <a name="l00014"></a>00014 <span class="preprocessor">#include &lt;vector&gt;</span>
-<a name="l00015"></a>00015 
-<a name="l00016"></a>00016 <span class="keyword">namespace </span>Primitives {
-<a name="l00017"></a>00017 
-<a name="l00018"></a><a class="code" href="classPrimitives_1_1Sensor.html">00018</a> <span class="keyword">class </span><a class="code" href="classPrimitives_1_1Sensor.html">Sensor</a> {
-<a name="l00019"></a>00019  <span class="keyword">public</span>:
-<a name="l00023"></a><a class="code" href="classPrimitives_1_1Sensor.html#ac88a8ef18f345e68d314b1121c6f2694">00023</a>   <span class="keyword">virtual</span> <a class="code" href="classPrimitives_1_1Sensor.html#ac88a8ef18f345e68d314b1121c6f2694">~Sensor</a>() {}
+<a name="l00015"></a>00015 <span class="preprocessor">#include &lt;string&gt;</span>
+<a name="l00016"></a>00016 
+<a name="l00017"></a>00017 <span class="keyword">namespace </span>Primitives {
+<a name="l00018"></a>00018 
+<a name="l00019"></a><a class="code" href="classPrimitives_1_1Sensor.html">00019</a> <span class="keyword">class </span><a class="code" href="classPrimitives_1_1Sensor.html">Sensor</a> {
+<a name="l00020"></a>00020  <span class="keyword">public</span>:
+<a name="l00021"></a><a class="code" href="classPrimitives_1_1Sensor.html#adeecfe96d56732be721d0e30d6df76fb">00021</a>   <span class="keyword">explicit</span> <a class="code" href="classPrimitives_1_1Sensor.html#adeecfe96d56732be721d0e30d6df76fb">Sensor</a>(std::string sensor_name) {
+<a name="l00022"></a>00022     name_ = sensor_name;
+<a name="l00023"></a>00023   }
 <a name="l00024"></a>00024 
-<a name="l00032"></a>00032   <span class="keyword">virtual</span> <span class="keywordtype">bool</span> <a class="code" href="classPrimitives_1_1Sensor.html#a21c7db423726d57b3e11477a069c5624">SetValues</a>(<span class="keywordtype">double</span> <span class="keyword">const</span> * <span class="keyword">const</span> values, <span class="keywordtype">int</span> num_values) = 0;
-<a name="l00033"></a>00033 
-<a name="l00039"></a>00039   <span class="keyword">virtual</span> <span class="keywordtype">double</span> <span class="keyword">const</span> * <span class="keyword">const</span> <a class="code" href="classPrimitives_1_1Sensor.html#a182b50f66348971f0f2f17bafe571932">GetValues</a>() = 0;
-<a name="l00040"></a>00040 
-<a name="l00046"></a><a class="code" href="classPrimitives_1_1Sensor.html#aa1640de9d225675c1e815e42b391badf">00046</a>   <span class="keyword">virtual</span> <span class="keywordtype">int</span> <span class="keyword">const</span> <a class="code" href="classPrimitives_1_1Sensor.html#aa1640de9d225675c1e815e42b391badf">get_num_values</a>() { <span class="keywordflow">return</span> num_values_; }
-<a name="l00047"></a>00047 
-<a name="l00053"></a><a class="code" href="classPrimitives_1_1Sensor.html#a756438dd1981f7242ae5b93bc62d2cd7">00053</a>   <span class="keyword">virtual</span> <span class="keywordtype">char</span> <span class="keyword">const</span> * <span class="keyword">const</span> <a class="code" href="classPrimitives_1_1Sensor.html#a756438dd1981f7242ae5b93bc62d2cd7">get_name</a>() { <span class="keywordflow">return</span> name_; }
-<a name="l00054"></a>00054 
-<a name="l00055"></a>00055  <span class="keyword">protected</span>:
-<a name="l00061"></a>00061   <span class="keyword">virtual</span> <span class="keywordtype">bool</span> <a class="code" href="classPrimitives_1_1Sensor.html#a0244a6fae6bc59f222ecc27268f76bde">Poll</a>() = 0;
-<a name="l00062"></a>00062 
-<a name="l00063"></a>00063  <span class="keyword">private</span>:
-<a name="l00071"></a>00071   <span class="keywordtype">char</span> <span class="keyword">const</span> * name_;
-<a name="l00072"></a>00072 
-<a name="l00076"></a>00076   <span class="keywordtype">double</span> *values_;
-<a name="l00077"></a>00077 
-<a name="l00081"></a>00081   <span class="keywordtype">int</span> num_values_;
-<a name="l00082"></a>00082 
-<a name="l00086"></a>00086   <span class="keywordtype">double</span> max_value_;
-<a name="l00087"></a>00087 
-<a name="l00091"></a>00091   <span class="keywordtype">double</span> min_value_;
-<a name="l00092"></a>00092 
-<a name="l00096"></a>00096   <span class="keywordtype">int</span> significant_figures_;
-<a name="l00097"></a>00097 
-<a name="l00101"></a>00101   <span class="keywordtype">double</span> nearby_threshold_;
-<a name="l00102"></a>00102 };
+<a name="l00028"></a><a class="code" href="classPrimitives_1_1Sensor.html#ac88a8ef18f345e68d314b1121c6f2694">00028</a>   <span class="keyword">virtual</span> <a class="code" href="classPrimitives_1_1Sensor.html#ac88a8ef18f345e68d314b1121c6f2694">~Sensor</a>() {}
+<a name="l00029"></a>00029 
+<a name="l00037"></a>00037   <span class="keyword">virtual</span> <span class="keywordtype">bool</span> <a class="code" href="classPrimitives_1_1Sensor.html#a21c7db423726d57b3e11477a069c5624">SetValues</a>(<span class="keywordtype">double</span> <span class="keyword">const</span> * <span class="keyword">const</span> values, <span class="keywordtype">int</span> num_values) = 0;
+<a name="l00038"></a>00038 
+<a name="l00044"></a>00044   <span class="keyword">virtual</span> <span class="keywordtype">double</span> <span class="keyword">const</span> * <span class="keyword">const</span> <a class="code" href="classPrimitives_1_1Sensor.html#a182b50f66348971f0f2f17bafe571932">GetValues</a>() = 0;
+<a name="l00045"></a>00045 
+<a name="l00051"></a><a class="code" href="classPrimitives_1_1Sensor.html#ade7efda83e3b76c0094254b8c8d5a2c0">00051</a>   <span class="keyword">virtual</span> <span class="keywordtype">int</span> <span class="keyword">const</span> <a class="code" href="classPrimitives_1_1Sensor.html#ade7efda83e3b76c0094254b8c8d5a2c0">get_num_values</a>()<span class="keyword"> const </span>{ <span class="keywordflow">return</span> num_values_; }
+<a name="l00052"></a>00052 
+<a name="l00058"></a><a class="code" href="classPrimitives_1_1Sensor.html#a2790a7af645e8608be083b05732c0ae1">00058</a>   <span class="keyword">virtual</span> <span class="keywordtype">int</span> <span class="keyword">const</span> <a class="code" href="classPrimitives_1_1Sensor.html#a2790a7af645e8608be083b05732c0ae1">get_min_increment</a>()<span class="keyword"> const </span>{
+<a name="l00059"></a>00059     <span class="keywordflow">return</span> min_increment_;
+<a name="l00060"></a>00060   }
+<a name="l00061"></a>00061 
+<a name="l00067"></a><a class="code" href="classPrimitives_1_1Sensor.html#a1703c2fbce0d105cd7247029523f9f6e">00067</a>   <span class="keyword">virtual</span> <span class="keywordtype">double</span> <a class="code" href="classPrimitives_1_1Sensor.html#a1703c2fbce0d105cd7247029523f9f6e">get_nearby_threshold</a>()<span class="keyword"> const </span>{ <span class="keywordflow">return</span> nearby_threshold_; }
+<a name="l00068"></a>00068 
+<a name="l00074"></a><a class="code" href="classPrimitives_1_1Sensor.html#a234ede334341df450e0da313ca90e50e">00074</a>   <span class="keyword">virtual</span> std::string <span class="keyword">const</span> &amp;<a class="code" href="classPrimitives_1_1Sensor.html#a234ede334341df450e0da313ca90e50e">get_name</a>()<span class="keyword"> const </span>{ <span class="keywordflow">return</span> name_; }
+<a name="l00075"></a>00075 
+<a name="l00076"></a>00076  <span class="keyword">protected</span>:
+<a name="l00082"></a>00082   <span class="keyword">virtual</span> <span class="keywordtype">bool</span> <a class="code" href="classPrimitives_1_1Sensor.html#a0244a6fae6bc59f222ecc27268f76bde">Poll</a>() = 0;
+<a name="l00083"></a>00083 
+<a name="l00084"></a>00084  <span class="keyword">private</span>:
+<a name="l00092"></a>00092   std::string name_;
+<a name="l00093"></a>00093 
+<a name="l00097"></a>00097   <span class="keywordtype">double</span> *values_;
+<a name="l00098"></a>00098 
+<a name="l00102"></a>00102   <span class="keywordtype">int</span> num_values_;
 <a name="l00103"></a>00103 
-<a name="l00104"></a>00104 }  <span class="comment">// namespace Primitives</span>
-<a name="l00105"></a>00105 
-<a name="l00106"></a>00106 <span class="preprocessor">#endif  // _SHL_PRIMITIVES_STUDENT_SENSOR_H_</span>
+<a name="l00107"></a>00107   <span class="keywordtype">double</span> max_value_;
+<a name="l00108"></a>00108 
+<a name="l00112"></a>00112   <span class="keywordtype">double</span> min_value_;
+<a name="l00113"></a>00113 
+<a name="l00117"></a>00117   <span class="keywordtype">double</span> min_increment_;
+<a name="l00118"></a>00118 
+<a name="l00122"></a>00122   <span class="keywordtype">double</span> nearby_threshold_;
+<a name="l00123"></a>00123 };
+<a name="l00124"></a>00124 
+<a name="l00125"></a>00125 }  <span class="comment">// namespace Primitives</span>
+<a name="l00126"></a>00126 
+<a name="l00127"></a>00127 <span class="preprocessor">#endif  // _SHL_PRIMITIVES_STUDENT_SENSOR_H_</span>
 </pre></div></div>
 </div>
   <div id="nav-path" class="navpath">
