--- a/StandardQLearner_8h_source.html
+++ b/StandardQLearner_8h_source.html
@@ -87,41 +87,42 @@ var searchBox = new SearchBox("searchBox", "search",false,'Search');
 <a name="l00011"></a>00011 <span class="preprocessor">#ifndef _SHL_PRIMITIVES_QLEARNER_STANDARDQLEARNER_H_</span>
 <a name="l00012"></a>00012 <span class="preprocessor"></span><span class="preprocessor">#define _SHL_PRIMITIVES_QLEARNER_STANDARDQLEARNER_H_</span>
 <a name="l00013"></a>00013 <span class="preprocessor"></span>
-<a name="l00014"></a>00014 <span class="preprocessor">#include &lt;string&gt;</span>
-<a name="l00015"></a>00015 <span class="preprocessor">#include &lt;vector&gt;</span>
-<a name="l00016"></a>00016 <span class="preprocessor">#include &quot;QLearner/QLearner.h&quot;</span>
-<a name="l00017"></a>00017 <span class="preprocessor">#include &quot;QLearner/QTable.h&quot;</span>
-<a name="l00018"></a>00018 <span class="preprocessor">#include &quot;QLearner/StateHistoryTuple.h&quot;</span>
-<a name="l00019"></a>00019 
-<a name="l00020"></a>00020 <span class="keyword">namespace </span>Primitives {
-<a name="l00021"></a>00021 
-<a name="l00022"></a><a class="code" href="classPrimitives_1_1StandardQLearner.html">00022</a> <span class="keyword">class </span><a class="code" href="classPrimitives_1_1StandardQLearner.html">StandardQLearner</a> : <span class="keyword">public</span> <a class="code" href="classPrimitives_1_1QLearner.html">QLearner</a> {
-<a name="l00023"></a>00023  <span class="keyword">public</span>:
-<a name="l00024"></a><a class="code" href="classPrimitives_1_1StandardQLearner.html#aec069c1f02ab8afcb27da85d684cbe25">00024</a>   <span class="keyword">explicit</span> <a class="code" href="classPrimitives_1_1StandardQLearner.html#aec069c1f02ab8afcb27da85d684cbe25">StandardQLearner</a>() {}
-<a name="l00025"></a>00025 
-<a name="l00033"></a>00033   <span class="keywordtype">bool</span> <a class="code" href="classPrimitives_1_1StandardQLearner.html#a3e30c92b703e783bfaf974c4b070556e">Load</a>(<span class="keywordtype">string</span> <span class="keyword">const</span>&amp; filename);
-<a name="l00034"></a>00034 
-<a name="l00043"></a>00043   <span class="keywordtype">bool</span> <a class="code" href="classPrimitives_1_1StandardQLearner.html#afd3d900034baaf79f613deb3c3edcfd1">Save</a>(<span class="keywordtype">string</span> <span class="keyword">const</span>&amp; filename);
-<a name="l00044"></a>00044 
-<a name="l00051"></a>00051   <span class="keywordtype">bool</span> <a class="code" href="classPrimitives_1_1StandardQLearner.html#ae7ad51c1b377941de9597de2be841696">Init</a>();
-<a name="l00052"></a>00052 
-<a name="l00060"></a>00060   <span class="keywordtype">bool</span> <a class="code" href="classPrimitives_1_1StandardQLearner.html#ad6c97f2e9c2fb2b289e9a0fb77bd5ffe">Learn</a>(<a class="code" href="classPrimitives_1_1State.html">State</a> <span class="keyword">const</span>&amp; state);
-<a name="l00061"></a>00061 
-<a name="l00074"></a>00074   <span class="keywordtype">bool</span> <a class="code" href="classPrimitives_1_1StandardQLearner.html#a47aa640522dec344127c2f03fa13f4cf">GetNearbyStates</a>(<a class="code" href="classPrimitives_1_1State.html">State</a> <span class="keyword">const</span>&amp; cur_state,
-<a name="l00075"></a>00075                        <span class="keywordtype">double</span> search_radius,
-<a name="l00076"></a>00076                        vector&lt;State const *&gt;&amp; nearby_states);
-<a name="l00077"></a>00077 
-<a name="l00078"></a>00078 
-<a name="l00087"></a>00087   <span class="keywordtype">bool</span> <a class="code" href="classPrimitives_1_1StandardQLearner.html#a568667b0dce8b156bcf32432e2f69add">GetNextState</a>(<a class="code" href="classPrimitives_1_1State.html">State</a> <span class="keyword">const</span>&amp; cur_state,
-<a name="l00088"></a>00088                     <a class="code" href="classPrimitives_1_1State.html">State</a> <span class="keyword">const</span>** next_state);
-<a name="l00089"></a>00089 
-<a name="l00090"></a>00090 
-<a name="l00097"></a>00097   <span class="keyword">virtual</span> <span class="keywordtype">bool</span> <a class="code" href="classPrimitives_1_1StandardQLearner.html#a7024946b539f2cd0454b22c124ddaa1c">AssignCredit</a>(<span class="keywordtype">double</span> signal) = 0;
-<a name="l00098"></a>00098 };
-<a name="l00099"></a>00099 
-<a name="l00100"></a>00100 }  <span class="comment">// namespace Primitives</span>
-<a name="l00101"></a>00101 
-<a name="l00102"></a>00102 <span class="preprocessor">#endif  // _SHL_PRIMITIVES_QLEARNER_STANDARDQLEARNER_H_</span>
+<a name="l00014"></a>00014 <span class="preprocessor">#include &lt;stdlib.h&gt;</span>
+<a name="l00015"></a>00015 <span class="preprocessor">#include &lt;string&gt;</span>
+<a name="l00016"></a>00016 <span class="preprocessor">#include &lt;vector&gt;</span>
+<a name="l00017"></a>00017 <span class="preprocessor">#include &quot;QLearner/QLearner.h&quot;</span>
+<a name="l00018"></a>00018 <span class="preprocessor">#include &quot;QLearner/QTable.h&quot;</span>
+<a name="l00019"></a>00019 <span class="preprocessor">#include &quot;QLearner/StateHistoryTuple.h&quot;</span>
+<a name="l00020"></a>00020 
+<a name="l00021"></a>00021 <span class="keyword">namespace </span>Primitives {
+<a name="l00022"></a>00022 
+<a name="l00023"></a><a class="code" href="classPrimitives_1_1StandardQLearner.html">00023</a> <span class="keyword">class </span><a class="code" href="classPrimitives_1_1StandardQLearner.html">StandardQLearner</a> : <span class="keyword">public</span> <a class="code" href="classPrimitives_1_1QLearner.html">QLearner</a> {
+<a name="l00024"></a>00024  <span class="keyword">public</span>:
+<a name="l00025"></a><a class="code" href="classPrimitives_1_1StandardQLearner.html#aec069c1f02ab8afcb27da85d684cbe25">00025</a>   <span class="keyword">explicit</span> <a class="code" href="classPrimitives_1_1StandardQLearner.html#aec069c1f02ab8afcb27da85d684cbe25">StandardQLearner</a>() {}
+<a name="l00026"></a>00026 
+<a name="l00034"></a>00034   <span class="keywordtype">bool</span> <a class="code" href="classPrimitives_1_1StandardQLearner.html#a3e30c92b703e783bfaf974c4b070556e">Load</a>(<span class="keywordtype">string</span> <span class="keyword">const</span>&amp; filename);
+<a name="l00035"></a>00035 
+<a name="l00044"></a>00044   <span class="keywordtype">bool</span> <a class="code" href="classPrimitives_1_1StandardQLearner.html#afd3d900034baaf79f613deb3c3edcfd1">Save</a>(<span class="keywordtype">string</span> <span class="keyword">const</span>&amp; filename);
+<a name="l00045"></a>00045 
+<a name="l00052"></a>00052   <span class="keywordtype">bool</span> <a class="code" href="classPrimitives_1_1StandardQLearner.html#aea6749f0208f7bba3f21667de2d112a7">Init</a>(std::vector&lt;Sensor const *&gt; <span class="keyword">const</span> &amp;sensors);
+<a name="l00053"></a>00053 
+<a name="l00061"></a>00061   <span class="keywordtype">bool</span> <a class="code" href="classPrimitives_1_1StandardQLearner.html#ad6c97f2e9c2fb2b289e9a0fb77bd5ffe">Learn</a>(<a class="code" href="classPrimitives_1_1State.html">State</a> <span class="keyword">const</span>&amp; state);
+<a name="l00062"></a>00062 
+<a name="l00074"></a>00074   <span class="keywordtype">bool</span> <a class="code" href="classPrimitives_1_1StandardQLearner.html#adb3d1cf222b59b5b2e917390a72b4810">GetNearbyStates</a>(<a class="code" href="classPrimitives_1_1State.html">State</a> <span class="keyword">const</span>&amp; cur_state,
+<a name="l00075"></a>00075                        vector&lt;State const *&gt;&amp; nearby_states);
+<a name="l00076"></a>00076 
+<a name="l00084"></a>00084   <span class="keywordtype">bool</span> <a class="code" href="classPrimitives_1_1StandardQLearner.html#ab896dcd9e9d1c2aaca3c9a96e4fa2d6e">AddNearbyEmptyStates</a>(<a class="code" href="classPrimitives_1_1State.html">State</a> <span class="keyword">const</span> &amp;state);
+<a name="l00085"></a>00085 
+<a name="l00094"></a>00094   <span class="keywordtype">bool</span> <a class="code" href="classPrimitives_1_1StandardQLearner.html#a568667b0dce8b156bcf32432e2f69add">GetNextState</a>(<a class="code" href="classPrimitives_1_1State.html">State</a> <span class="keyword">const</span>&amp; cur_state,
+<a name="l00095"></a>00095                     <a class="code" href="classPrimitives_1_1State.html">State</a> <span class="keyword">const</span>** next_state);
+<a name="l00096"></a>00096 
+<a name="l00097"></a>00097 
+<a name="l00105"></a>00105   <span class="keyword">virtual</span> <span class="keywordtype">bool</span> <a class="code" href="classPrimitives_1_1StandardQLearner.html#a7024946b539f2cd0454b22c124ddaa1c">AssignCredit</a>(<span class="keywordtype">double</span> signal) = 0;
+<a name="l00106"></a>00106 };
+<a name="l00107"></a>00107 
+<a name="l00108"></a>00108 }  <span class="comment">// namespace Primitives</span>
+<a name="l00109"></a>00109 
+<a name="l00110"></a>00110 <span class="preprocessor">#endif  // _SHL_PRIMITIVES_QLEARNER_STANDARDQLEARNER_H_</span>
 </pre></div></div>
 </div>
   <div id="nav-path" class="navpath">
