--- a/search/functions_61.html
+++ b/search/functions_61.html
@@ -7,33 +7,39 @@
 <body class="SRPage">
 <div id="SRIndex">
 <div class="SRStatus" id="Loading">Loading...</div>
+<div class="SRResult" id="SR_addnearbyemptystates">
+ <div class="SREntry">
+  <a id="Item0" onkeydown="return searchResults.Nav(event,0)" onkeypress="return searchResults.Nav(event,0)" onkeyup="return searchResults.Nav(event,0)" class="SRSymbol" href="../classPrimitives_1_1StandardQLearner.html#ab896dcd9e9d1c2aaca3c9a96e4fa2d6e" target="_parent">AddNearbyEmptyStates</a>
+  <span class="SRScope">Primitives::StandardQLearner</span>
+ </div>
+</div>
 <div class="SRResult" id="SR_addstate">
  <div class="SREntry">
-  <a id="Item0" onkeydown="return searchResults.Nav(event,0)" onkeypress="return searchResults.Nav(event,0)" onkeyup="return searchResults.Nav(event,0)" class="SRSymbol" href="../classPrimitives_1_1QTable.html#a3d764bfdd4d6611a24cda96768e5e4b4" target="_parent">AddState</a>
+  <a id="Item1" onkeydown="return searchResults.Nav(event,1)" onkeypress="return searchResults.Nav(event,1)" onkeyup="return searchResults.Nav(event,1)" class="SRSymbol" href="../classPrimitives_1_1QTable.html#a3d764bfdd4d6611a24cda96768e5e4b4" target="_parent">AddState</a>
   <span class="SRScope">Primitives::QTable</span>
  </div>
 </div>
 <div class="SRResult" id="SR_applycredit">
  <div class="SREntry">
-  <a id="Item1" onkeydown="return searchResults.Nav(event,1)" onkeypress="return searchResults.Nav(event,1)" onkeyup="return searchResults.Nav(event,1)" class="SRSymbol" href="../classPrimitives_1_1CreditAssignmentType.html#a20eafec4c92d1a701baa24147fe48618" target="_parent">ApplyCredit</a>
+  <a id="Item2" onkeydown="return searchResults.Nav(event,2)" onkeypress="return searchResults.Nav(event,2)" onkeyup="return searchResults.Nav(event,2)" class="SRSymbol" href="../classPrimitives_1_1CreditAssignmentType.html#a20eafec4c92d1a701baa24147fe48618" target="_parent">ApplyCredit</a>
   <span class="SRScope">Primitives::CreditAssignmentType</span>
  </div>
 </div>
 <div class="SRResult" id="SR_assigncredit">
  <div class="SREntry">
-  <a id="Item2" onkeydown="return searchResults.Nav(event,2)" onkeypress="return searchResults.Nav(event,2)" onkeyup="return searchResults.Nav(event,2)" class="SRSymbol" href="javascript:searchResults.Toggle('SR_assigncredit')">AssignCredit</a>
+  <a id="Item3" onkeydown="return searchResults.Nav(event,3)" onkeypress="return searchResults.Nav(event,3)" onkeyup="return searchResults.Nav(event,3)" class="SRSymbol" href="javascript:searchResults.Toggle('SR_assigncredit')">AssignCredit</a>
   <div class="SRChildren">
-    <a id="Item2_c0" onkeydown="return searchResults.NavChild(event,2,0)" onkeypress="return searchResults.NavChild(event,2,0)" onkeyup="return searchResults.NavChild(event,2,0)" class="SRScope" href="../classPrimitives_1_1QLearner.html#abe879e7a03b5f116ef70284e77481b02" target="_parent">Primitives::QLearner::AssignCredit()</a>
-    <a id="Item2_c1" onkeydown="return searchResults.NavChild(event,2,1)" onkeypress="return searchResults.NavChild(event,2,1)" onkeyup="return searchResults.NavChild(event,2,1)" class="SRScope" href="../classPrimitives_1_1StandardQLearner.html#a7024946b539f2cd0454b22c124ddaa1c" target="_parent">Primitives::StandardQLearner::AssignCredit()</a>
+    <a id="Item3_c0" onkeydown="return searchResults.NavChild(event,3,0)" onkeypress="return searchResults.NavChild(event,3,0)" onkeyup="return searchResults.NavChild(event,3,0)" class="SRScope" href="../classPrimitives_1_1QLearner.html#abe879e7a03b5f116ef70284e77481b02" target="_parent">Primitives::QLearner::AssignCredit()</a>
+    <a id="Item3_c1" onkeydown="return searchResults.NavChild(event,3,1)" onkeypress="return searchResults.NavChild(event,3,1)" onkeyup="return searchResults.NavChild(event,3,1)" class="SRScope" href="../classPrimitives_1_1StandardQLearner.html#a7024946b539f2cd0454b22c124ddaa1c" target="_parent">Primitives::StandardQLearner::AssignCredit()</a>
   </div>
  </div>
 </div>
 <div class="SRResult" id="SR_attemptmatch">
  <div class="SREntry">
-  <a id="Item3" onkeydown="return searchResults.Nav(event,3)" onkeypress="return searchResults.Nav(event,3)" onkeyup="return searchResults.Nav(event,3)" class="SRSymbol" href="javascript:searchResults.Toggle('SR_attemptmatch')">AttemptMatch</a>
+  <a id="Item4" onkeydown="return searchResults.Nav(event,4)" onkeypress="return searchResults.Nav(event,4)" onkeyup="return searchResults.Nav(event,4)" class="SRSymbol" href="javascript:searchResults.Toggle('SR_attemptmatch')">AttemptMatch</a>
   <div class="SRChildren">
-    <a id="Item3_c0" onkeydown="return searchResults.NavChild(event,3,0)" onkeypress="return searchResults.NavChild(event,3,0)" onkeyup="return searchResults.NavChild(event,3,0)" class="SRScope" href="../classObservation_1_1Dummy.html#a6adc2431a0fc44271bd5ea65c40a1a97" target="_parent">Observation::Dummy::AttemptMatch()</a>
-    <a id="Item3_c1" onkeydown="return searchResults.NavChild(event,3,1)" onkeypress="return searchResults.NavChild(event,3,1)" onkeyup="return searchResults.NavChild(event,3,1)" class="SRScope" href="../classObservation_1_1Observer.html#a87c2f9264c26926ef96b6a0284ba1b26" target="_parent">Observation::Observer::AttemptMatch()</a>
+    <a id="Item4_c0" onkeydown="return searchResults.NavChild(event,4,0)" onkeypress="return searchResults.NavChild(event,4,0)" onkeyup="return searchResults.NavChild(event,4,0)" class="SRScope" href="../classObservation_1_1Dummy.html#a6adc2431a0fc44271bd5ea65c40a1a97" target="_parent">Observation::Dummy::AttemptMatch()</a>
+    <a id="Item4_c1" onkeydown="return searchResults.NavChild(event,4,1)" onkeypress="return searchResults.NavChild(event,4,1)" onkeyup="return searchResults.NavChild(event,4,1)" class="SRScope" href="../classObservation_1_1Observer.html#a87c2f9264c26926ef96b6a0284ba1b26" target="_parent">Observation::Observer::AttemptMatch()</a>
   </div>
  </div>
 </div>
