--- a/search/variables_73.html
+++ b/search/variables_73.html
@@ -9,8 +9,11 @@
 <div class="SRStatus" id="Loading">Loading...</div>
 <div class="SRResult" id="SR_sensors_5f">
  <div class="SREntry">
-  <a id="Item0" onkeydown="return searchResults.Nav(event,0)" onkeypress="return searchResults.Nav(event,0)" onkeyup="return searchResults.Nav(event,0)" class="SRSymbol" href="../classPrimitives_1_1Student.html#a5b04f3fb6f1a38f7cd680d71e234b300" target="_parent">sensors_</a>
-  <span class="SRScope">Primitives::Student</span>
+  <a id="Item0" onkeydown="return searchResults.Nav(event,0)" onkeypress="return searchResults.Nav(event,0)" onkeyup="return searchResults.Nav(event,0)" class="SRSymbol" href="javascript:searchResults.Toggle('SR_sensors_5f')">sensors_</a>
+  <div class="SRChildren">
+    <a id="Item0_c0" onkeydown="return searchResults.NavChild(event,0,0)" onkeypress="return searchResults.NavChild(event,0,0)" onkeyup="return searchResults.NavChild(event,0,0)" class="SRScope" href="../classPrimitives_1_1QLearner.html#a5f2f5a43b40cbbdef54a0a42cd8bac52" target="_parent">Primitives::QLearner::sensors_()</a>
+    <a id="Item0_c1" onkeydown="return searchResults.NavChild(event,0,1)" onkeypress="return searchResults.NavChild(event,0,1)" onkeyup="return searchResults.NavChild(event,0,1)" class="SRScope" href="../classPrimitives_1_1Student.html#a5b04f3fb6f1a38f7cd680d71e234b300" target="_parent">Primitives::Student::sensors_()</a>
+  </div>
  </div>
 </div>
 <div class="SRResult" id="SR_state_5f">
